kubernetes/platform/observability/monitoring/httproute-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: networking
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: networking
      sectionName: https
  hostnames:
    - "grafana.jupitertech.net"
  rules:
    - backendRefs:
        - name: monitoring-grafana
          namespace: monitoring
          port: 80
